# Chess3

./: CMakeLists.txt
Chess3UCI/: CMakeLists.txt  main.cpp
EngineTest/: CMakeLists.txt  main.cpp
Eval/: NeuroNetEval.hpp  NeuroNetOpt.hpp
Gigantua/: ChessBase.hpp  ChessTest.hpp  MoveGen.hpp  MoveList.hpp
GigantuaTest/: CMakeLists.txt  main.cpp
Search/: AlphaBetaSearch.hpp  AntSearch.hpp  GameTree.hpp  MoveCollector.hpp  TTable.hpp
Test/: CMakeLists.txt
